--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
   "scripts": {
     "stop": "taskkill /F /IM node.exe",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "nodemon index.js"
   },
   "author": "sungyup",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.18"
   }
 }
